Moved styles from pwm resources/ directory into individual scss for each component. Converted to Sass style sheets.

--- a/src/main/angular/index.html
+++ b/src/main/angular/index.html
@@ -5,7 +5,8 @@
     <title>SSPR Development</title>
 </head>
 <body ng-cloak>
-<ui-view>Loading...</ui-view>
+<ui-view id="people-search-view">Loading...</ui-view>
+
 <script src="vendor/angular.js"></script>
 <script src="vendor/angular-ui-router.js"></script>
 </body>
