--- a/src/main/angular/index.html
+++ b/src/main/angular/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <title>SSPR Development</title>
+
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body ng-cloak>
-<ui-view id="people-search-view">Loading...</ui-view>
+<ui-view>Loading...</ui-view>
 
 <script src="vendor/angular.js"></script>
 <script src="vendor/angular-ui-router.js"></script>
