Retrieve column configuration for PeopleSearchTableComponent from API. Code clean up

--- a/src/main/angular/src/ux/table.directive.html
+++ b/src/main/angular/src/ux/table.directive.html
@@ -29,7 +29,8 @@
         </tr>
     </thead>
     <tbody>
-        <tr ng-repeat="item in table.getItems()">
+        <tr ng-repeat="item in table.getItems()"
+            ng-click="table.clickItem(item)">
             <td ng-repeat="column in table.getVisibleColumns()" ng-bind="table.getValue(item, column.valueExpression)"></td>
         </tr>
     </tbody>
