--- a/src/main/angular/src/ux/table.directive.html
+++ b/src/main/angular/src/ux/table.directive.html
@@ -2,8 +2,8 @@
 
 <div class="table-configuration">
     <mf-icon-button icon="settings" ng-click="table.toggleConfigurationVisibility($event)"></mf-icon-button>
-    <ul ng-if="table.showConfiguration">
-        <li ng-repeat="column in table.columns" ng-click="table.onConfigurationColumnClick(column, $event)">
+    <ul ng-if="table.showConfiguration" ng-click="$event.stopPropagation()">
+        <li ng-repeat="column in table.columns">
             <label class="label">
                 <input name="column-visibile" type="checkbox" ng-model="column.visible" aria-label="Toggle column visibility"/>
                 {{column.label}}
