Highlighting text that matches search in TableComponent. Re-introduced angular-sanitize

--- a/src/main/angular/src/ux/table.directive.html
+++ b/src/main/angular/src/ux/table.directive.html
@@ -30,7 +30,8 @@
     </thead>
     <tbody>
         <tr ng-repeat="item in table.getItems()" ng-click="table.clickItem(item, $event)">
-            <td ng-repeat="column in table.getVisibleColumns()" ng-bind="table.getValue(item, column.valueExpression)"></td>
+            <td ng-repeat="column in table.getVisibleColumns()"
+                ng-bind-html="table.getDisplayValue(item, column.valueExpression)"></td>
         </tr>
     </tbody>
 </table>
