AutoCompleteComponent usability isses fixed. AutoCompleteComponent code cleaned up by moving template generation into template function. DI broken in production. TSLint rule for console.log/error.

--- a/src/main/angular/src/ux/table.directive.html
+++ b/src/main/angular/src/ux/table.directive.html
@@ -31,7 +31,7 @@
     <tbody>
         <tr ng-repeat="item in table.getItems()" ng-click="table.clickItem(item, $event)">
             <td ng-repeat="column in table.getVisibleColumns()"
-                ng-bind-html="table.getDisplayValue(item, column.valueExpression)"></td>
+                ng-bind="table.getValue(item, column.valueExpression)"></td>
         </tr>
     </tbody>
 </table>
