PeopleSearch TableDirective configuration is now in the last column of the table instead of on top

--- a/src/main/angular/src/ux/table.directive.html
+++ b/src/main/angular/src/ux/table.directive.html
@@ -1,17 +1,5 @@
 <ng-transclude></ng-transclude>
 
-<div class="table-configuration">
-    <mf-icon-button icon="configure_thin" ng-click="table.toggleConfigurationVisibility($event)"></mf-icon-button>
-    <ul ng-if="table.showConfiguration" ng-click="$event.stopPropagation()">
-        <li ng-repeat="column in table.columns">
-            <label class="label">
-                <input name="column-visibile" type="checkbox" ng-model="column.visible" aria-label="Toggle column visibility"/>
-                {{column.label}}
-            </label>
-        </li>
-    </ul>
-</div>
-
 <table st-table="rowCollection" class="table table-striped">
     <thead>
         <tr>
@@ -26,12 +14,26 @@
                              ng-click="table.toggleSortOrder()"></mf-icon>
                 </div>
             </th>
+            <th class="table-configuration-column">
+                <div class="table-configuration">
+                    <mf-icon-button icon="configure_thin" ng-click="table.toggleConfigurationVisibility($event)"></mf-icon-button>
+                    <ul ng-if="table.showConfiguration" ng-click="$event.stopPropagation()">
+                        <li ng-repeat="column in table.columns">
+                            <label class="label">
+                                <input name="column-visibile" type="checkbox" ng-model="column.visible" aria-label="Toggle column visibility"/>
+                                {{column.label}}
+                            </label>
+                        </li>
+                    </ul>
+                </div>
+            </th>
         </tr>
     </thead>
     <tbody>
         <tr ng-repeat="item in table.getItems()" ng-click="table.clickItem(item, $event)">
             <td ng-repeat="column in table.getVisibleColumns()"
                 ng-bind="table.getValue(item, column.valueExpression)"></td>
+            <td></td>
         </tr>
     </tbody>
 </table>
