report engine improvements

--- a/src/main/resources/password/pwm/package.html
+++ b/src/main/resources/password/pwm/package.html
@@ -25,7 +25,8 @@ PWM root package.
 
 Password Management Framework (PWM).
 <p/>
-More information about PWM can be found at <a
-        href="http://forge.novell.com/modules/xfmod/project/?pwm">http://forge.novell.com/modules/xfmod/project/?pwm</a>
+More information about PWM can be found at
+ <a href="http://www.pwm-project.org">http://www.pwm-project.org</a> or
+ <a href="https://github.com/pwm-project/pwm">https://github.com/pwm-project/pwm</a>.
 </body>
 
