added the id to the table

--- a/src/main/angular/src/ux/table.directive.html
+++ b/src/main/angular/src/ux/table.directive.html
@@ -32,7 +32,8 @@
     <tbody>
         <tr ng-repeat="item in table.getItems()" ng-click="table.clickItem(item, $event)">
             <td ng-repeat="column in table.getVisibleColumns()"
-                ng-bind="table.getValue(item, column.valueExpression)"></td>
+                ng-bind="table.getValue(item, column.valueExpression)"
+                ng-attr-id="{{'email-' + table.getValue(item, column.valueExpression) }}"></td>
             <td></td>
         </tr>
     </tbody>
