--- a/server/src/main/webapp/public/resources/text/macroHelp.html
+++ b/server/src/main/webapp/public/resources/text/macroHelp.html
@@ -223,6 +223,16 @@
             <span class="documentationParameter">urlParameter</span> and <span class="documentationParameter">base64</span>.
         </td>
     </tr>
+    <tr>
+        <td class="key">
+            <span style="white-space: pre">@Hash:<span class="documentationParameter">type</span>:[[<span class="documentationParameter">value</span>]]@</span>
+        </td>
+        <td>
+            Hash a value using the specified hash type, where <span class="documentationParameter">type</span> is the type of hash and where <span class="documentationParameter">value</span> is
+            the value to hash.  The value may include other macros.  Hash types permitted are <span class="documentationParameter">md5</span>,
+            <span class="documentationParameter">sha1</span>, <span class="documentationParameter">sha256</span>, and <span class="documentationParameter">sha512</span>.
+        </td>
+    </tr>
 </table>
     <div class="footnote">Parameters that need to include a literal <span class="documentationParameter">@</span> or <span class="documentationParameter">:</span> character must escape these characters with a preceding <span class="documentationParameter">/</span> such as <span class="documentationParameter">/@</span> or <span class="documentationParameter">/:</span></div>
 <br/>
