--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <title>SSPR Development</title>
+    <title>PWM Development</title>
 
     <style>
         html, body {
