--- a/client/src/helpdesk/recent-verifications-dialog.template.html
+++ b/client/src/helpdesk/recent-verifications-dialog.template.html
@@ -60,7 +60,7 @@
     <mf-icon-button class="ias-dialog-close-button"
                     icon="close_thick"
                     id="close-icon"
-                    ng-attr-title="{{ 'Title_Close' | translate }}"
+                    ng-attr-title="{{ 'Button_CloseWindow' | translate }}"
                     ng-click="close()">
     </mf-icon-button>
 </ias-dialog>
