--- a/client/src/helpdesk/verifications-dialog.template.html
+++ b/client/src/helpdesk/verifications-dialog.template.html
@@ -57,7 +57,10 @@
                     <div ng-switch-when="ATTRIBUTES">
                         <div class="ias-input-container" ng-repeat="input in $ctrl.inputs">
                             <label ng-attr-for="{{input.name}}" ng-bind="input.label"></label>
-                            <input ng-attr-id="{{input.name}}" type="text" ng-model="$ctrl.formData[input.name]">
+                            <input autocomplete="off"
+                                   ng-attr-id="{{input.name}}"
+                                   type="text"
+                                   ng-model="$ctrl.formData[input.name]">
                         </div>
                     </div>
                     <div ng-switch-when="EMAIL|SMS" ng-switch-when-separator="|">
@@ -67,7 +70,7 @@
                         </div>
                         <div class="ias-input-container">
                             <label>Token</label>
-                            <input id="token" type="text" ng-model="$ctrl.formData.code">
+                            <input autocomplete="off" id="token" type="text" ng-model="$ctrl.formData.code">
                         </div>
 
                     </div>
@@ -75,7 +78,7 @@
                         <p ng-bind="'Display_HelpdeskOtpValidation' | translate"></p>
                         <div class="ias-input-container">
                             <label>Code</label>
-                            <input id="code" type="text" ng-model="$ctrl.formData.code">
+                            <input autocomplete="off" id="code" type="text" ng-model="$ctrl.formData.code">
                         </div>
                     </div>
 
