--- a/client/src/modules/helpdesk/verifications-dialog.template.html
+++ b/client/src/modules/helpdesk/verifications-dialog.template.html
@@ -91,18 +91,15 @@
                         <ias-icon icon="status_ok_thick" style="color:#37c26a;" class="ias-success" ng-if="$ctrl.verificationStatus==='passed'"></ias-icon>
                         <ias-icon icon="status_error_thick" style="color:#e50000;" class="ias-error" ng-if="$ctrl.verificationStatus==='failed'"></ias-icon>
                     </div>
-                    <p ng-if="$ctrl.verificationStatus==='failed'">
-                        Viewing details only available after a user has been successfully verified
-                    </p>
+                    <p ng-bind="'Display_InvalidVerification' | translate" ng-if="$ctrl.verificationStatus==='failed'"></p>
                 </form>
             </div>
 
             <div class="ias-actions">
-                <ias-button ng-disabled="$ctrl.verificationStatus!=='passed'"
-                           ng-click="$ctrl.viewDetails()"
-                           ng-if="!$ctrl.isDetailsView">
-                    View Details
-                </ias-button>
+                <ias-button ng-bind="'Display_ViewDetails' | translate"
+                            ng-disabled="$ctrl.verificationStatus!=='passed'"
+                            ng-click="$ctrl.viewDetails()"
+                            ng-if="!$ctrl.isDetailsView"></ias-button>
                 <ias-button ng-disabled="$ctrl.verificationStatus!=='passed'"
                            ng-click="$ctrl.clickOkButton()"
                            ng-if="$ctrl.isDetailsView">
