--- a/client/src/index-dev.html
+++ b/client/src/index-dev.html
@@ -27,8 +27,8 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <title>PWM Development</title>
 
-    <link rel="stylesheet" href="vendor/ias-icons.css">
-    <link rel="stylesheet" href="vendor/ux-ias.css">
+    <link rel="stylesheet" href="vendor/ux-ias/ias-icons.css">
+    <link rel="stylesheet" href="vendor/ux-ias/ux-ias.css">
     <style>
         html, body {
             margin: 0;
@@ -40,10 +40,5 @@
 <body ng-cloak>
 <ui-view>Loading...</ui-view>
 
-<script src="vendor/angular.js"></script>
-<script src="vendor/angular-aria.js"></script>
-<script src="vendor/angular-translate.js"></script>
-<script src="vendor/angular-ui-router.js"></script>
-<script src="vendor/ng-ias.js"></script>
 </body>
 </html>
