--- a/client/src/modules/peoplesearch/orgchart-email.controller.html
+++ b/client/src/modules/peoplesearch/orgchart-email.controller.html
@@ -23,12 +23,12 @@
 <div class="ias-dialog">
     <div class="ias-dialog-container">
         <div class="ias-dialog-label">
-            <div class="ias-title" ng-bind="'Title_ExportOrgChart' | translate"></div>
+            <div class="ias-title" ng-bind="'Title_EmailOrgChart' | translate"></div>
         </div>
         <div class="ias-dialog-content">
-            <p ng-bind="'Instructions_ExportOrgChart1' | translate"></p>
-            <p ng-bind="'Instructions_ExportOrgChart2' | translate"></p>
-            <label for="depth" ng-bind="'Label_ExportLevelDepth' | translate"></label>
+            <p ng-bind="'Instructions_EmailTeam1' | translate"></p>
+            <p ng-bind="'Instructions_EmailTeam2' | translate"></p>
+            <label for="depth" ng-bind="'Label_EmailLevelDepth' | translate"></label>
             <div>
                 <!--<select ng-model="query.key" ng-change="$ctrl.onAdvancedSearchAttributeChanged(query)">-->
                     <!--<option ng-repeat="tag in $ctrl.advancedSearchTags" ng-attr-value="{{tag.attribute}}">{{tag.label}}</option>-->
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="ias-actions">
-            <ias-button ng-click="$ctrl.exportOrgChart()">{{ 'Button_Export' | translate }}</ias-button>
+            <ias-button ng-click="$ctrl.emailOrgChart()">{{ 'Button_Email' | translate }}</ias-button>
         </div>
         <ias-button class="ias-icon-button ias-dialog-cancel-button"
                     id="close-icon"
