--- a/client/src/modules/peoplesearch/orgchart-export.controller.html
+++ b/client/src/modules/peoplesearch/orgchart-export.controller.html
@@ -27,19 +27,11 @@
         </div>
         <div class="ias-dialog-content">
             <p ng-bind="'Instructions_ExportOrgChart1' | translate"></p>
-            <p ng-bind="'Instructions_ExportOrgChart2' | translate"></p>
-            <label for="depth" ng-bind="'Label_ExportLevelDepth' | translate"></label>
-            <div>
-                <!--<select ng-model="query.key" ng-change="$ctrl.onAdvancedSearchAttributeChanged(query)">-->
-                    <!--<option ng-repeat="tag in $ctrl.advancedSearchTags" ng-attr-value="{{tag.attribute}}">{{tag.label}}</option>-->
-                <!--</select>-->
+            <p ng-if="$ctrl.depth > 1" ng-bind="'Instructions_ExportOrgChart2' | translate"></p>
+            <label ng-if="$ctrl.depth > 1" for="depth" ng-bind="'Label_ExportLevelDepth' | translate"></label>
+            <div ng-if="$ctrl.depth > 1">
                 <select id="depth">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                    <option>6</option>
+                    <option ng-repeat="x in [].constructor($ctrl.depth) track by $index">{{$index+1}}</option>
                 </select>
             </div>
         </div>
