--- a/client/src/modules/helpdesk/helpdesk-detail-dialog.template.html
+++ b/client/src/modules/helpdesk/helpdesk-detail-dialog.template.html
@@ -20,48 +20,51 @@
   ~ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
   -->
 
-<div class="ias-dialog" ng-switch="status">
-    <div class="ias-dialog-container" ng-switch-default>
-        <div class="WaitDialogBlank"></div>
-    </div>
 
-    <div class="ias-dialog-container" ng-switch-when="confirm">
-        <div class="ias-dialog-label">
-            <div class="ias-title" ng-bind="title"></div>
-        </div>
-        <div class="ias-dialog-content">
-            <p ng-bind="text"></p>
-            <p ng-bind="secondaryText" ng-if="!!secondaryText"></p>
-        </div>
-        <div class="ias-actions">
-            <ias-button ng-click="confirm()">{{ 'Button_OK' | translate }}</ias-button>
-            <ias-button ng-click="close()">{{ 'Button_Cancel' | translate }}</ias-button>
+<div class="ias-styles-root">
+    <div class="ias-dialog" ng-switch="status">
+        <div class="ias-dialog-container" ng-switch-default>
+            <div class="WaitDialogBlank"></div>
         </div>
 
-        <ias-button class="ias-icon-button ias-dialog-cancel-button"
-                    id="close-icon"
-                    ng-attr-title="{{ 'Button_CloseWindow' | translate }}"
-                    ng-click="close()">
-            <ias-icon icon="close_thick"></ias-icon>
-        </ias-button>
-    </div>
+        <div class="ias-dialog-container" ng-switch-when="confirm">
+            <div class="ias-dialog-label">
+                <div class="ias-title" ng-bind="title"></div>
+            </div>
+            <div class="ias-dialog-content">
+                <p ng-bind="text"></p>
+                <p ng-bind="secondaryText" ng-if="!!secondaryText"></p>
+            </div>
+            <div class="ias-actions">
+                <ias-button ng-click="confirm()">{{ 'Button_OK' | translate }}</ias-button>
+                <ias-button ng-click="close()">{{ 'Button_Cancel' | translate }}</ias-button>
+            </div>
 
-    <div class="ias-dialog-container" ng-switch-when="success">
-        <div class="ias-dialog-label">
-            <div class="ias-title" ng-bind="title"></div>
-        </div>
-        <div class="ias-dialog-content">
-            <p ng-bind="text"></p>
-        </div>
-        <div class="ias-actions">
-            <ias-button ng-click="close()">{{ 'Button_OK' | translate }}</ias-button>
+            <ias-button class="ias-icon-button ias-dialog-cancel-button"
+                        id="close-icon"
+                        ng-attr-title="{{ 'Button_CloseWindow' | translate }}"
+                        ng-click="close()">
+                <ias-icon icon="close_thick"></ias-icon>
+            </ias-button>
         </div>
 
-        <ias-button class="ias-icon-button ias-dialog-cancel-button"
-                    id="close-icon"
-                    ng-attr-title="{{ 'Button_CloseWindow' | translate }}"
-                    ng-click="close()">
-            <ias-icon icon="close_thick"></ias-icon>
-        </ias-button>
+        <div class="ias-dialog-container" ng-switch-when="success">
+            <div class="ias-dialog-label">
+                <div class="ias-title" ng-bind="title"></div>
+            </div>
+            <div class="ias-dialog-content">
+                <p ng-bind="text"></p>
+            </div>
+            <div class="ias-actions">
+                <ias-button ng-click="close()">{{ 'Button_OK' | translate }}</ias-button>
+            </div>
+
+            <ias-button class="ias-icon-button ias-dialog-cancel-button"
+                        id="close-icon"
+                        ng-attr-title="{{ 'Button_CloseWindow' | translate }}"
+                        ng-click="close()">
+                <ias-icon icon="close_thick"></ias-icon>
+            </ias-button>
+        </div>
     </div>
 </div>
