--- a/client/src/modules/peoplesearch/orgchart-email.controller.html
+++ b/client/src/modules/peoplesearch/orgchart-email.controller.html
@@ -20,29 +20,31 @@
   ~ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
   -->
 
-<div class="ias-dialog">
-    <div class="ias-dialog-container">
-        <div class="ias-dialog-label">
-            <div class="ias-title" ng-bind="'Title_EmailOrgChart' | translate"></div>
-        </div>
-        <div class="ias-dialog-content">
-            <p ng-bind="'Instructions_EmailTeam1' | translate"></p>
-            <p ng-if="$ctrl.depth > 1" ng-bind="'Instructions_EmailTeam2' | translate"></p>
-            <label ng-if="$ctrl.depth > 1" for="depth" ng-bind="'Label_EmailLevelDepth' | translate"></label>
-            <div ng-if="$ctrl.depth > 1">
-                <select id="depth">
-                    <option ng-repeat="x in [].constructor($ctrl.depth) track by $index">{{$index+1}}</option>
-                </select>
+<div class="ias-styles-root">
+    <div class="ias-dialog">
+        <div class="ias-dialog-container">
+            <div class="ias-dialog-label">
+                <div class="ias-title" ng-bind="'Title_EmailOrgChart' | translate"></div>
             </div>
+            <div class="ias-dialog-content">
+                <p ng-bind="'Instructions_EmailTeam1' | translate"></p>
+                <p ng-if="$ctrl.depth > 1" ng-bind="'Instructions_EmailTeam2' | translate"></p>
+                <label ng-if="$ctrl.depth > 1" for="depth" ng-bind="'Label_EmailLevelDepth' | translate"></label>
+                <div ng-if="$ctrl.depth > 1">
+                    <select id="depth">
+                        <option ng-repeat="x in [].constructor($ctrl.depth) track by $index">{{$index+1}}</option>
+                    </select>
+                </div>
+            </div>
+            <div class="ias-actions">
+                <ias-button ng-click="$ctrl.emailOrgChart()">{{ 'Button_EmailTeam' | translate }}</ias-button>
+            </div>
+            <ias-button class="ias-icon-button ias-dialog-cancel-button"
+                        id="close-icon"
+                        ng-attr-title="{{ 'Button_CloseWindow' | translate }}"
+                        ng-click="close()">
+                <ias-icon icon="close_thick"></ias-icon>
+            </ias-button>
         </div>
-        <div class="ias-actions">
-            <ias-button ng-click="$ctrl.emailOrgChart()">{{ 'Button_EmailTeam' | translate }}</ias-button>
-        </div>
-        <ias-button class="ias-icon-button ias-dialog-cancel-button"
-                    id="close-icon"
-                    ng-attr-title="{{ 'Button_CloseWindow' | translate }}"
-                    ng-click="close()">
-            <ias-icon icon="close_thick"></ias-icon>
-        </ias-button>
     </div>
 </div>
